gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/opapplyscope.d
version https://git-lfs.github.com/spec/v1
oid sha256:9b3ae5a83e02a6496b3c4339fc1e1cf1f21817f01bc9f24f10d71be5f9cfd05b
size 672
